# govuk_notify_rs

./: .env.example  Cargo.toml  LICENSE  README.md
src/: auth.rs  lib.rs
