[package]
name = "govuk_notify"
version = "0.1.2"
edition = "2021"
authors = ["baarkerlounger <db@slothlife.xyz>"]
description = """
Use this (unofficial) client to send emails using the [GOV.UK Notify](https://www.notifications.service.gov.uk) API.
"""
license = "MIT"
repository = "https://github.com/baarkerlounger/govuk_notify_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
jsonwebtoken = "8.1.1"
chrono = "0.4.23"
serde_json = "1.0.89"
serde = "1.0.147"

[dev-dependencies]
dotenvy = "0.15.6"
tokio = { version = "1.22.0", features = ["full"] }
